# airmax

./: .gitignore  Makefile  dev-requirements.txt  install-airflow.sh  notes.md  pyproject.toml  requirements.txt
dags/: find_the_iss.py  hubspot_pipeline.py  my_astronauts_dag.py  test_xcoms.py
include/: constants.py  datasets.py  get_deals.py  search_deals.py
