[tool.poetry]
name = "airmax"
version = "0.1.0"
description = ""
authors = ["maxestorr <maxestorr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
apache-airflow-providers-github = "2.6.0"
hubspot-api-client = "^9.0.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
minio = "^7.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pyright = "1.1.362"


[tool.pyright]
include = [
    "dags",
    "include",
    "tests"
]
exclude = [
    "**/__pycache__",
]
